Issue #3164237: Fix Varbase Welcome message not showing up after install compilation after adding and enabling moderation sidebar on the homepage

--- a/modules/varbase_tour/css/theme/tour.default.theme.css
+++ b/modules/varbase_tour/css/theme/tour.default.theme.css
@@ -1,16 +1,20 @@
 .joyride-tip-guide {
   z-index: 10000;
 }
+
 .joyride-tip-guide.tip-tour-switch {
   top: 35px !important;
   right: 35px !important;
   left: auto !important;
 }
+
 .joyride-tip-guide.tip-tour-switch .joyride-nub {
   left: auto;
   right: 28px;
 }
+
 .joyride-tip-guide .button {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   display: inline-block;
   position: relative;
@@ -34,79 +38,107 @@
   font-weight: 600;
   font-size: 14px;
   -webkit-transition: all 0.1s;
+  -o-transition: all 0.1s;
   transition: all 0.1s;
   -webkit-font-smoothing: antialiased;
   /* 6 */
 }
+
 .joyride-tip-guide .button:hover,
 .joyride-tip-guide .button:focus {
   background-color: #f9f8f6;
   background-image: -webkit-linear-gradient(top, #fcfcfa, #e9e9dd);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#fcfcfa), to(#e9e9dd));
+  background-image: -o-linear-gradient(top, #fcfcfa, #e9e9dd);
   background-image: linear-gradient(to bottom, #fcfcfa, #e9e9dd);
   color: #1a1a1a;
   text-decoration: none;
   outline: none;
 }
+
 .joyride-tip-guide .button:hover {
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.125);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.125);
 }
+
 .joyride-tip-guide .button:focus {
   z-index: 10;
   border: 1px solid #3ab2ff;
+  -webkit-box-shadow: 0 0 0.5em 0.1em rgba(51, 177, 255, 0.7);
   box-shadow: 0 0 0.5em 0.1em rgba(51, 177, 255, 0.7);
 }
+
 .joyride-tip-guide .button:active {
   border: 1px solid #a6a6a6;
   background-color: #dfdfd9;
   background-image: -webkit-linear-gradient(top, #f6f6f3, #e7e7df);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f6f6f3), to(#e7e7df));
+  background-image: -o-linear-gradient(top, #f6f6f3, #e7e7df);
   background-image: linear-gradient(to bottom, #f6f6f3, #e7e7df);
+  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
   -webkit-transition: none;
+  -o-transition: none;
   transition: none;
 }
+
 .joyride-tip-guide .button--primary {
   border-color: #1e5c90;
   background-color: #0071b8;
   background-image: -webkit-linear-gradient(top, #007bc6, #0071b8);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#007bc6), to(#0071b8));
+  background-image: -o-linear-gradient(top, #007bc6, #0071b8);
   background-image: linear-gradient(to bottom, #007bc6, #0071b8);
   color: #fff;
   text-shadow: 0 1px rgba(0, 0, 0, 0.5);
   font-weight: 700;
   -webkit-font-smoothing: antialiased;
 }
+
 .joyride-tip-guide .button--primary:hover,
 .joyride-tip-guide .button--primary:focus {
   background-color: #2369a6;
   background-image: -webkit-linear-gradient(top, #0c97ed, #1f86c7);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0c97ed), to(#1f86c7));
+  background-image: -o-linear-gradient(top, #0c97ed, #1f86c7);
   background-image: linear-gradient(to bottom, #0c97ed, #1f86c7);
   border-color: #0071b8;
   color: #fff;
 }
+
 .joyride-tip-guide .button--primary:focus {
   border: 1px solid #1280df;
 }
+
 .joyride-tip-guide .button--primary:hover {
+  -webkit-box-shadow: 0 1px 2px rgba(23, 26, 28, 0.25);
   box-shadow: 0 1px 2px rgba(23, 26, 28, 0.25);
 }
+
 .joyride-tip-guide .button--primary:active {
   background-image: -webkit-linear-gradient(top, #08639b, #0071b8);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#08639b), to(#0071b8));
+  background-image: -o-linear-gradient(top, #08639b, #0071b8);
   background-image: linear-gradient(to bottom, #08639b, #0071b8);
   border-color: #144b78;
+  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
 }
+
 .joyride-tip-guide h2,
 .joyride-tip-guide .heading-b {
   font-weight: bold;
   margin: 10px 0;
   font-size: 1.385em;
 }
+
 [dir="rtl"] body .joyride-tip-guide.tip-tour-switch {
   top: 35px !important;
   left: 135px !important;
   right: auto !important;
 }
+
 [dir="rtl"] body .joyride-tip-guide .joyride-nub {
   left: 28px;
   right: auto;
 }
-/*# sourceMappingURL=tour.default.theme.css.map */
